--- a/index.html
+++ b/index.html
@@ -1,23 +1,52 @@
 <!DOCTYPE html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width">
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
+    <title>Nadya Cn Portfolio</title>
+</head>
+<body>
+    <header>
+        <div class="container">
+            <div class="header-left">
+                <P class="logo"><img src="images/logo.png" style="width: 50px; height: 50px; vertical-align: middle;">Nadya Cahyaningsih</P>
+            </div>
+            <span class="fa fa-bars menu-icon"></span>
+            <div class="header-right">
+                <a href="#" class="home">Home</a>
+                <a href="#" class="project">Project</a>
+                <a href="https://www.linkedin.com/in/nadya-cahyaningsih-2a7556151/" target="_blank" class="contact">Contact</a>
+            </div>
+        </div>
+    </header>
 
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
-        <script src="js/vendor/modernizr-2.6.2.min.js"></script>
-    </head>
-    <body>
-
-        <!-- Add your site or application content here -->
-        <p>HTML5 Starter Template</p>
-
-	<script src="js/vendor/jquery.js"></script>
-
-    </body>
+    <main>
+        <div class="container">
+            <span class="background"></span>
+            <h2>Hi, Feel Free to call me Nadya</h2>
+            <h1>Your All-rounder UI/UX Designer</h1>
+        </div>
+        <div class="about">
+            <div>
+                <div class="self-portrait">
+                    <img src="images/self-portrait.png" alt="">
+                </div>
+                <p>Majoring Information System, concentration in Accounting Computer, 
+                making me know about how to build website, and accounting. 
+                I began my career as a Freelance Graphic Designer in 2018. 
+                Due to my volunteering experience, Problem Solving is a skill that i should use everyday to handling about 
+                190+ people. And Right now, i’m looking forward to work with you, building usefull and amazing 
+                product that can help solving other’s problem.</p>
+            </div>
+            
+            <div class="social">
+                <span class="btn email"><a href="mailto:nadyacahyaningsih@gmail.com" target="_blank">Send An Email</a></span>
+                <span class="btn resume"><a href="https://drive.google.com/file/d/1Wr4DkFvVKGiGfzm4FefDhlnbQZpOaGHQ/view?usp=sharing" target="_blank"><i class="fas fa-download" style="margin-right: 12px;"></i>Resume</a></span>   
+            </div>
+        </div>
+    </main>
+</body>
 </html>
