--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <div class="container">
             <div class="header-left">
-                <P class="logo"><img src="https://github.com/Nadyacn/portfolio/blob/587838e78cac743de0298b49239d07cbe3b76214/logo.png" style="width: 50px; height: 50px; vertical-align: middle;">Nadya Cahyaningsih</P>
+                <P class="logo"><img src="portfolio/logo.png" style="width: 50px; height: 50px; vertical-align: middle;">Nadya Cahyaningsih</P>
             </div>
             <span class="fa fa-bars menu-icon"></span>
             <div class="header-right">
