--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <div class="container">
             <div class="header-left">
-                <P class="logo"><img src="portfolio/logo.png" style="width: 50px; height: 50px; vertical-align: middle;">Nadya Cahyaningsih</P>
+                <P class="logo"><img src="https://lh3.googleusercontent.com/-NQgmWMPGB6w/YYowevynvDI/AAAAAAAAAB8/_6LXT8VP4YUZnjc4172C-2W-inf5ooeHwCLcBGAsYHQ/s0/logo.png?authuser=1" style="width: 50px; height: 50px; vertical-align: middle;">Nadya Cahyaningsih</P>
             </div>
             <span class="fa fa-bars menu-icon"></span>
             <div class="header-right">
@@ -32,7 +32,7 @@
         <div class="about">
             <div>
                 <div class="self-portrait">
-                    <img src="https://github.com/Nadyacn/portfolio/blob/587838e78cac743de0298b49239d07cbe3b76214/self-portrait.png" alt="">
+                    <img src="https://lh3.googleusercontent.com/-0s15tAwII3g/YYowiqdbx6I/AAAAAAAAACI/6i8oTCyEyYcgfs98GFYjGiTuFXVvVducwCLcBGAsYHQ/s0/self-portrait.png?authuser=1" alt="">
                 </div>
                 <p>Majoring Information System, concentration in Accounting Computer, 
                 making me know about how to build website, and accounting. 
