--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <span class="fa fa-bars menu-icon"></span>
             <div class="header-right">
                 <a href="#" class="home">Home</a>
-                <a href="https://nadyacn.medium.com/" class="project">Project</a>
+                <a href="https://nadyacn.medium.com/" target="_blank" class="project">Project</a>
                 <a href="https://www.linkedin.com/in/nadya-cahyaningsih-2a7556151/" target="_blank" class="contact">Contact</a>
             </div>
         </div>
