--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="about">
             <div>
                 <div class="self-portrait">
-                    <img src="https://lh3.googleusercontent.com/-0s15tAwII3g/YYowiqdbx6I/AAAAAAAAACI/6i8oTCyEyYcgfs98GFYjGiTuFXVvVducwCLcBGAsYHQ/s0/self-portrait.png?authuser=1" alt="">
+                    <img src="https://github.com/Nadyacn/portfolio/blob/13c00f561778143f80466e50e7bbb674b92adce5/self-portrait.png" alt="">
                 </div>
                 <p>Majoring Information System, concentration in Accounting Computer, 
                 making me know about how to build website, and accounting. 
