--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <div class="container">
             <div class="header-left">
-                <P class="logo"><img src="https://lh3.googleusercontent.com/-NQgmWMPGB6w/YYowevynvDI/AAAAAAAAAB8/_6LXT8VP4YUZnjc4172C-2W-inf5ooeHwCLcBGAsYHQ/s0/logo.png?authuser=1" style="width: 50px; height: 50px; vertical-align: middle;">Nadya Cahyaningsih</P>
+                <P class="logo"><img src="https://github.com/Nadyacn/portfolio/blob/1892046bbc98838d33accb955f572fb5009d300b/logo.png" style="width: 50px; height: 50px; vertical-align: middle;">Nadya Cahyaningsih</P>
             </div>
             <span class="fa fa-bars menu-icon"></span>
             <div class="header-right">
