--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <div class="container">
             <div class="header-left">
-                <P class="logo"><img src="https://github.com/Nadyacn/portfolio/blob/1892046bbc98838d33accb955f572fb5009d300b/logo.png" style="width: 50px; height: 50px; vertical-align: middle;">Nadya Cahyaningsih</P>
+                <P class="logo"><img src="portfolio/logo.png" style="width: 50px; height: 50px; vertical-align: middle;">Nadya Cahyaningsih</P>
             </div>
             <span class="fa fa-bars menu-icon"></span>
             <div class="header-right">
@@ -32,7 +32,7 @@
         <div class="about">
             <div>
                 <div class="self-portrait">
-                    <img src="https://github.com/Nadyacn/portfolio/blob/13c00f561778143f80466e50e7bbb674b92adce5/self-portrait.png" alt="">
+                    <img src="portfolio/self-portrait.png" alt="">
                 </div>
                 <p>Majoring Information System, concentration in Accounting Computer, 
                 making me know about how to build website, and accounting. 
